# questions_to_cards

./: .gitignore  pyproject.toml
questions_to_cards/: qbreader-api.ipynb  questions-to-cards-test.ipynb
